# MA-Distributed-Graph

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.py  benchmark_results.txt  distributed_array.hpp  distributed_bfs.hpp  distributed_set.hpp  distribution_strategy.hpp  generate_graphs.py  main.cpp  run.sh
.devcontainer/: Dockerfile  devcontainer.json
algorithms/common/: bfs.hpp
algorithms/distributed/: bfs.hpp  connected_component.hpp  label_propagation.cpp
algorithms/sequential/: bfs.hpp
experiment_suites/: combblas-cc-fileio.suite.yaml  combblas-cc.suite.yaml  combblas-lacc.suite.yaml  grarrph-cc-kagen.suite.yaml  grarrph-cc.suite.yaml  havoqgt-cc-kagen.suite.yaml  havoqgt-cc.suite.yaml  ingest_havoqgt.suite.yaml  kagen_generate.suite.yaml
primitives/: distributed_array.hpp
scripts/: benchmark.py  generate_graphs.py  plotter.py  run.sh  slurm_schedule.sh  slurm_script.sh
src/: main.cpp  run_bfs.cpp  run_cc.cpp
src/algorithms/common/: bfs.hpp  graph.hpp
src/algorithms/distributed/: bfs.hpp  connected_component.hpp  frontier_bfs.hpp  min_label_propagation.hpp
src/primitives/: distributed_array.hpp  distributed_set.hpp
